# bazel-java-example

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  buf.yaml  lint.sh
.github/workflows/: ci.yaml
calculator/cli/: BUILD.bazel
calculator/cli/src/main/java/com/mattnworb/calculator/cli/: Main.java
calculator/core/: BUILD.bazel
calculator/core/src/main/java/com/mattnworb/calculator/: Calculator.java
calculator/core/src/test/java/com/mattnworb/calculator/: CalculatorTest.java
hello-world/java/: BUILD.bazel
hello-world/java/src/main/java/com/mattnworb/helloworld/: HelloWorldCli.java  HelloWorldServer.java
hello-world/java/src/test/java/com/mattnworb/helloworld/: SimpleTest.java
hello-world/proto/mattnworb/helloworld/v1/: BUILD.bazel  service.proto
routeguide/client/: BUILD.bazel
routeguide/client/src/main/java/com/mattnworb/routeguide/client/: RouteGuideClient.java
routeguide/proto/mattnworb/routeguide/v1/: BUILD.bazel  route_guide.proto
routeguide/server/: BUILD.bazel
routeguide/server/src/main/java/com/mattnworb/routeguide/server/: RouteGuideServer.java
routeguide/util/: BUILD.bazel
routeguide/util/src/main/java/com/mattnworb/routeguide/util/: RouteGuideUtil.java
tools/: BUILD.bazel  multitool.lock.json
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
