bazel_dep(name = "grpc-java", version = "1.75.0")
bazel_dep(name = "protobuf", version = "33.1")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

use_repo(maven, "maven")

maven.install(
    artifacts = [
        "net.sourceforge.argparse4j:argparse4j:0.9.0",

        # ensuring consistent versions between grpc and protobuf
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.13.2",
        "com.google.errorprone:error_prone_annotations:2.44.0",
        "com.google.guava:guava:33.5.0-jre",
    ],
    known_contributing_modules = ["", "grpc-java", "protobuf"],
    repositories = ["https://repo.maven.apache.org/maven2/"],
    strict_visibility = True,
)
