# main dependencies
bazel_dep(name = "grpc-java", version = "1.78.0")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_buf", version = "0.5.2")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_multitool", version = "1.11.1")

# rules_buf setup
buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# make `bazel run @rules_buf_toolchains//:buf` available to run buf.
use_repo(buf, "rules_buf_toolchains")

# rules_jvm_external setup
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")

maven.install(
    artifacts = [
        "net.sourceforge.argparse4j:argparse4j:0.9.0",

        # ensuring consistent versions between grpc and protobuf
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.13.2",
        "com.google.errorprone:error_prone_annotations:2.46.0",
        "com.google.guava:guava:33.5.0-jre",
    ],
    known_contributing_modules = [
        "",
        "grpc-java",
        "protobuf",
    ],
    repositories = ["https://repo.maven.apache.org/maven2/"],
    strict_visibility = True,
)

# rules_multitool setup
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:multitool.lock.json")
use_repo(multitool, "multitool")

# dev dependencies
bazel_dep(name = "aspect_rules_lint", version = "1.13.0", dev_dependency = True)
bazel_dep(name = "bazel_env.bzl", version = "0.7.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
