load("@bazel_env.bzl", "bazel_env")

bazel_env(
    name = "bazel_env",
    toolchains = {
        "jdk": "@rules_java//toolchains:current_host_java_runtime",
    },
    tools = {
        "buf": "@rules_buf_toolchains//:buf",
        "buildifier": "@buildifier_prebuilt//:buildifier",
        "format": "//tools/format",
        "jar": "$(JAVABASE)/bin/jar",
        "java": "$(JAVA)",
    },
)
