load("@rules_java//java:defs.bzl", "java_binary", "java_test")

java_binary(
    name = "cli",
    srcs = ["src/main/java/com/mattnworb/helloworld/HelloWorldCli.java"],
    main_class = "com.mattnworb.helloworld.HelloWorldCli",
    deps = [
        "//hello-world/proto/mattnworb/helloworld/v1:service_java_grpc",
        "//hello-world/proto/mattnworb/helloworld/v1:service_java_proto",
        "@grpc-java//api",
        "@grpc-java//netty",
        "@maven//:net_sourceforge_argparse4j_argparse4j",
        "@protobuf//java/core",
    ],
)

java_binary(
    name = "server",
    srcs = ["src/main/java/com/mattnworb/helloworld/HelloWorldServer.java"],
    main_class = "com.mattnworb.helloworld.HelloWorldServer",
    deps = [
        "//hello-world/proto/mattnworb/helloworld/v1:service_java_grpc",
        "//hello-world/proto/mattnworb/helloworld/v1:service_java_proto",
        "@grpc-java//api",
        "@grpc-java//netty",
        "@grpc-java//protobuf",
        "@grpc-java//stub",
        "@maven//:com_google_guava_guava",
        "@maven//:net_sourceforge_argparse4j_argparse4j",
    ],
)

# TODO (mattbrown 2025-11-17) create a real test
java_test(
    name = "simple_test",
    srcs = ["src/test/java/com/mattnworb/helloworld/SimpleTest.java"],
    main_class = "com.mattnworb.helloworld.SimpleTest",
    use_testrunner = False,
)
