load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "util",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//routeguide:__subpackages__"],
    deps = [
        "//routeguide/proto/mattnworb/routeguide/v1:route_guide_java_proto",
        "@protobuf//java/util",
    ],
)
